# pyprojscaf

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
src/: main.py
tests/: test_main.py
